# teensy

./: README.md  readme.md
core/: CMakeLists.txt  readme.md
core/boards/: board.cmake  boards.cmake  linker.ld
core/boards/raspberry/pico/: rp2040.cmake  rp2040.ld
core/boards/raspberry/pico/sources/: boot.c
core/boards/teensy/: imxrt1062.cmake
core/boards/teensy/4.1/: imxrt1062.cmake  imxrt1062.ld  linker.ld
core/boards/teensy/4.1/include/: board.h  delay.h
core/boards/teensy/4.1/sources/: atomic.c  boot.c  clockspeed.c  delay.c  math.c  rtc.c  startup.c  tempmon.c
core/boards/teensy/4.1/usb/: CMakeLists.txt
core/boards/teensy/4.1/usb/include/: descriptor.h  usb.h
core/boards/teensy/4.1/usb/sources/: descriptor.c  serial.c  usb.c
core/boards/teensy/sources/: boot.c  startup.c
core/cmake/: core-config-version.cmake  core-config.cmake  core-export.cmake  parse-version.cmake
core/cmake/toolchains/: arm-none-eabi.cmake  common.cmake
core/uswift/: Package.swift  readme.md
core/uswift/Sources/Core/: CMakeLists.txt
core/uswift/Sources/Core/Collection/: Slice.swift
core/uswift/Sources/Core/Core/: Never.swift  Optional.swift  Protocols.swift  Result.swift  Types.swift  Void.swift
core/uswift/Sources/Core/Extensions/: Floats.swift  Integers.swift
core/uswift/Sources/Core/Float/: Double.swift  Float.swift  FloatingPointRoundingRule.swift  FloatingPointSign.swift
core/uswift/Sources/Core/Int/: Int.swift  Int16.swift  Int32.swift  Int64.swift  Int8.swift
core/uswift/Sources/Core/Memory/: MemoryLayout.swift
core/uswift/Sources/Core/Other/: Assert.swift  C.swift  Core.swift  Libc.swift  Math.swift  Operators.swift  Protocols.swift  Runtime.swift  Types.swift
core/uswift/Sources/Core/Pointer/: UnsafeMutablePointer.swift  UnsafeMutableRawPointer.swift  UnsafePointer.swift  UnsafeRawPointer.swift  _Pointer.swift
core/uswift/Sources/Core/Protocols/: AdditiveArithmetic.swift  BidirectionalCollection.swift  BinaryInteger.swift  Collection.swift  Comparable.swift  Copyable.swift  Equatable.swift  Error.swift  Escapable.swift  FixedWidthInteger.swift  FloatingPoint.swift  Hashable.swift  Identifiable.swift  LosslessStringConvertible.swift  Numeric.swift  OptionSet.swift  RandomAccessCollection.swift  RangeExpression.swift  SignedInteger.swift  SignedNumeric.swift  Strideable.swift  UnsignedInteger.swift
core/uswift/Sources/Core/Protocols/Collection/: BidirectionalCollection.swift  Collection.swift  IteratorProtocol.swift  RandomAccessCollection.swift  Sequence.swift
core/uswift/Sources/Core/Protocols/Collections/: RandomAccessCollection.swift
core/uswift/Sources/Core/Protocols/Core/: Hashable.swift  Identifiable.swift  Sendable.swift
core/uswift/Sources/Core/Protocols/Math/: AdditiveArithmetic.swift  BinaryFloatingPoint.swift  BinaryInteger.swift  Comparable.swift  Equatable.swift  FixedWidthInteger.swift  SignedInteger.swift  SignedNumeric.swift  Strideable.swift  UnsignedInteger.swift
core/uswift/Sources/Core/Protocols/Other/: Sendable.swift  (+1 more)
core/uswift/Sources/Core/Range/: ClosedRange.swift  Range.swift
core/uswift/Sources/Core/Runtime/: Core.swift  Runtime.swift
core/uswift/Sources/Core/String/: CustomStringConvertible.swift  StaticString.swift
core/uswift/Sources/Core/Types/: Bool.swift  ClosedRange.swift  Hasher.swift  ObjectIdentifier.swift  Optional.swift  Range.swift  Result.swift
core/uswift/Sources/Core/UInt/: UInt.swift  UInt16.swift  UInt32.swift  UInt64.swift  UInt8.swift
core/uswift/Sources/Onone/: CMakeLists.txt
core/uswift/Sources/Runtime/: CMakeLists.txt  Enum.c  HeapObject.c  KnownMetadata.c  Metadata.c  Numeric.c  Types.h  Visibility.h
core/uswift/Sources/_Concurrency/: CMakeLists.txt
core/uswift/Sources/_StringProcessing/: CMakeLists.txt
project/: CMakeLists.txt  app.hex  flash.cmake
project/sources/: main.c  math.c
project/swift/: CMakeLists.txt  test.swift
project/usb/include/: memory.h  serial.h
project/usb/sources/: descriptor.c  memory.c  usb.c
project/uswift/: CMakeLists.txt
project/uswift/Sources/: CMakeLists.txt
project/uswift/Sources/Core/: AdditiveArithmetic.swift  Assert.swift  BidirectionalCollection.swift  BinaryInteger.swift  Bool.swift  Builtin.swift  BuiltinTypes.swift  CMakeLists.txt  CTypes.swift  Collection.swift  Comparable.swift  CompilerProtocols.swift  Equatable.swift  FixedWidthInteger.swift  Int.swift  Int16.swift  Int32.swift  Int64.swift  Int8.swift  Integers.swift  IteratorProtocol.swift  Lifetime.swift  Never.swift  Numeric.swift  OpaquePointer.swift  Operators.swift  OptionSet.swift  Optional.swift  Pointer.swift  Range.swift  RangeExpression.swift  Sequence.swift  SignedNumeric.swift  StaticString.swift  Strideable.swift  Swift.swift  UInt.swift  UInt16.swift  UInt32.swift  UInt64.swift  (+5 more)
project/uswift/Sources/Onone/: CMakeLists.txt
project/uswift/Sources/Runtime/: CMakeLists.txt  HeapObject.c  KnownMetadata.c  Metadata.c  Types.h  Visibility.h
project/uswift/Sources/_Concurrency/: CMakeLists.txt  _Concurrency.swift
project/uswift/Sources/_StringProcessing/: CMakeLists.txt
